# Adaptive-Web-Security-Auditor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: release-v0.2.md  screenshots.md
src/bb_assistant/: __init__.py
src/bb_assistant/core/: __init__.py  audit.py  checklists.py  evidence.py  findings.py  http_client.py  models.py  profiler.py  rate_limiter.py  reporting.py  scope_guard.py
src/bb_assistant/core/checks/: __init__.py  base.py  cookies.py  cors.py  csp.py  robots_txt.py  runner.py  security_headers.py  security_txt.py  tls_basics.py  url_utils.py
src/bb_assistant/interfaces/: __init__.py  streamlit_app.py  ui_helpers.py
src/bb_assistant/persistence/: __init__.py  db.py  logging.py  models.py  repositories.py
templates/: report_management.md.j2  report_technical.md.j2
tests/: test_audit_export.py  test_checklists.py  test_cors_csp_checks.py  test_db_request_logger.py  test_evidence_manager.py  test_findings_workflow.py  test_http_client_blocks_oos.py  test_passive_checks.py  test_persistence.py  test_profiler.py  test_rate_limiter.py  test_reporting.py  test_scope_guard.py  test_ui_helpers.py
