[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-assistant"
version = "0.2.0"
description = "Passive-first Bug Bounty Analysis & Findings Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "bb-assistant contributors" }
]
dependencies = [
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "streamlit>=1.35,<2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
  "pytest>=8.2,<9.0",
  "pytest-httpx>=0.30,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["bb_assistant"]
